// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "gitlab.inspr.dev/inspr/core/pkg/meta";

import "meta.proto";

package meta;

// The node service definition.
service NodeOperator {
  // Performs a node create operation
  rpc CreateNode (Node) returns (nodeReply) {}

  // Performs a node de;ete operation
  rpc DeleteNode (nodeDescription) returns (nodeReply) {}

  // Performs a node update operation
  rpc UpdateNode (nodeWithDescription) returns (nodeReply) {}

  // Performs a node search / recover operation
  rpc GetNode (nodeDescription) returns (nodeDescription) {}

  // Performs a node list operation
  rpc ListNodes (stub) returns (nodeDescriptionArray) {}

  // Returns the node status for each app
  rpc UpdateNodeStatus (stub) returns (nodeStatus) {}
}

// The request message containing the node description and its ID
message nodeStatus {
    string name = 1;
    string status = 2;
    string description = 3;
}

// The request message containing and array of node description
message nodeDescriptionArray {
    repeated Node nodeDescription = 1;
}

// The request message containing the Channel description
message nodeWithDescription {
    string channelDescription = 1;
    Node targetChannel = 2;
}


// The request message containing the node description
message nodeDescription {
    string nodeDescription = 1;
}

// The response message containing the response
message nodeReply {
  string error = 1;
  string value = 2;
}


